RA-07 fix: Implementation of basic screen layout with a list of categories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">AndroidSprint</string>
     <string name="title_categories">категории</string>
     <string name="title_favorites">избранное</string>
+    <string name="burger">burger</string>
+    <string name="title_burgers_category_text">бургеры</string>
+    <string name="description_burgers_category_text">Рецепты всех популярных видов бургеров</string>
 </resources>
