RA-07 fix addition to contentDescription

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="burger">burger</string>
     <string name="title_burgers_category_text">бургеры</string>
     <string name="description_burgers_category_text">Рецепты всех популярных видов бургеров</string>
+    <string name="screen_burger_categories">категории</string>
 </resources>
