--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_burgers_category_text">бургеры</string>
     <string name="description_burgers_category_text">Рецепты всех популярных видов бургеров</string>
     <string name="screen_burger_categories">категории</string>
+    <string name="recipes_list">Список рецептов</string>
 </resources>
