--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="description_burgers_category_text">Рецепты всех популярных видов бургеров</string>
     <string name="screen_burger_categories">категории</string>
     <string name="recipes_list">Список рецептов</string>
+    <string name="image_category_description">Изображение категории</string>
 </resources>
