--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="screen_burger_categories">категории</string>
     <string name="recipes_list">Список рецептов</string>
     <string name="image_category_description">Изображение категории</string>
+    <string name="title_recipe">Рецепт</string>
 </resources>
