RA-13. implementation of a recipe screen without an ingredient counting mechanism

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="recipes_list">Список рецептов</string>
     <string name="image_category_description">Изображение категории</string>
     <string name="title_recipe">Рецепт</string>
+    <string name="title_ingredients">ингредиенты</string>
+    <string name="title_method">способ приготовления</string>
 </resources>
