RA-14 Add SeekBar for ingredient calculation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_recipe">Рецепт</string>
     <string name="title_ingredients">ингредиенты</string>
     <string name="title_method">способ приготовления</string>
+    <string name="title_portions">Порции:</string>
 </resources>
