--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_method">способ приготовления</string>
     <string name="title_portions">Порции:</string>
     <string name="default_portions_count">1</string>
+    <string name="text_empty_favorites">Вы ещё не добавили ни одного рецепта в избранное</string>
 </resources>
